--- a/public/appWeb/ListaNotas.html
+++ b/public/appWeb/ListaNotas.html
@@ -109,5 +109,6 @@
         </div>
     </section>
     <script src="./JS/listanotas.js"></script>
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
 </body>
 </html>
